# exercise-fixed-point-arithmetic-ES-CPSF

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  helper.sh
.devcontainer/: Dockerfile  devcontainer.json
FixedPoint/: CMakeLists.txt  FixedPoint.cpp
UnitTest/: CMakeLists.txt  UnitTest.cpp
include/: TypeChecker.h
